Faq accordion open fix on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,11 @@ body {
 
 .questions {
   width: 520px;
-  max-height: 387px;
+  /* height: 387px; */
 }
 
 .header-title {
   font-size: var(--fs-1);
-  line-height: var(--lh-1);
-  font-weight: var(--fw-1);
 }
 
 .header {
@@ -111,15 +109,15 @@ body {
   .faq-container {
     padding: var(--spacing-300);
     width: 300px;
-    height: 500px;
   }
 
   .questions {
     width: 280px;
-    height: 400px;
   }
 
   .acc-btn {
     gap: 25px;
   }
+
+
 }
